<resources>
    <string name="app_name">BIF Locator</string>
    <string name="press_me_button">Press Me!</string>
    <string name="hello_world_current_count">"Hello World!\nCurrent count: "</string>
    <string name="reset_counter">Reset Counter</string>
    <string name="location_img">Location Image</string>
    <string name="viewing_map">You are currently viewing the map!</string>
    <string name="marker_icon">Marker Icon</string>
    <string name="at_home">You are currently at home\nEnter a location on the Map!</string>
    <string name="goto_map_button">Goto Map</string>
    <string name="go_back_home">Go Back Home</string>
    <string name="map_preview">Map Preview</string>
    <string name="location_hint">Go to a location…</string>
    <string name="going_to_hcmus">Going to HCMUS</string>
    <string name="map">Map</string>
    <string name="location">Location</string>
    <string name="favorites">Favorites</string>
    
    <!-- Auth Screen Strings -->
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    
    <!-- Map Screen Strings -->
    <string name="your_location">Your Location</string>
    <string name="you_are_here">You are here</string>
    <string name="selected_location">Selected Location</string>
    
    <!-- Social Screen Strings -->
    <string name="social">Social</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="add_new_friend">Add New Friend</string>
    <string name="create_new_group">Create New Group</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="members">%d members</string>
    <string name="delete">Delete</string>
    <string name="more_options">More options</string>
    <string name="add_friend">Add Friend</string>
    <string name="search_by_name_or_id">Search by name or ID</string>
    <string name="close">Close</string>
    
    <!-- Profile Screen Strings -->
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="app_settings">APP SETTINGS</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="account">ACCOUNT</string>
    <string name="personal_information">Personal Information</string>
    <string name="privacy_security">Privacy &amp; Security</string>
    <string name="log_out">Log Out</string>
    <string name="bxa_user">BXA User</string>
    <string name="user_email">user@example.com</string>
    <string name="go_back">Go back</string>
    <string name="details">Details</string>
    <string name="place_photo">Place Photo</string>
    <string name="remove_favorite">Remove favorite</string>
    <string name="address_icon">Address icon</string>
    <string name="address">ADDRESS</string>
    <string name="description_icon">Description icon</string>
    <string name="description">DESCRIPTION</string>
    <string name="notes_icon">Notes icon</string>
    <string name="notes">NOTES</string>
    <string name="search">Search</string>
    <string name="no_favorite_places">No favorite places found</string>
    <string name="favorite_places">Favorite places</string>
</resources>