<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white">

        <TextView
            android:id="@+id/home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_home"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:lineSpacingExtra="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/location_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/text_input_default"
            android:layout_marginHorizontal="30dp"
            android:padding="15dp"
            android:hint="@string/location_hint"
            android:inputType="text"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:gravity="center"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/goto_map"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_map"
            android:background="@drawable/button_default"
            android:contentDescription="@string/goto_map_button" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>